--- a/main/templates/main/index_runcoding.html
+++ b/main/templates/main/index_runcoding.html
@@ -40,7 +40,7 @@
 <body>
 <header>
     <div class="header_wrap">
-        <a href="http://ec2-54-180-116-142.ap-northeast-2.compute.amazonaws.com:8000/" class="logo">
+        <a href="/" class="logo">
             <img src="{% static 'resource/img/common/logo.png' %}" alt="runcoding">
         </a>
         <!-- gnb -->
@@ -79,7 +79,7 @@
                         <a href="orderList.html">주문내역</a>
                     </li>
                     <li>
-                        <a href="login.html">로그아웃</a>
+                        <a href="{% static 'login/logout.html' %}">로그아웃</a>
                     </li>
                 </ul>
             </div>
