--- a/main/templates/payment/order.html
+++ b/main/templates/payment/order.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+{% load static %}
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>코딩키트 | 머릿속 생각을 쉽게,뚝딱 런코딩</title>
@@ -13,53 +14,53 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="runcoding">
     <meta property="og:description" content="runcoding">
-    <meta property="og:image" content="../resource/img/common/share_img.jpg">
+    <meta property="og:image" content="{% static 'resource/img/common/share_img.jpg' %}">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="../resource/img/common/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="../resource/img/common/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../resource/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/font-awesome.min.css' %}">
 
     <!-- slick css -->
-    <link rel="stylesheet" type="text/css" href="../resource/css/slick.css" />
-    <link rel="stylesheet" type="text/css" href="../resource/css/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/slick.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/slick-theme.css' %}" />
 
-    <link rel="stylesheet" type="text/css" href="../resource/css/reset.css?after" />
-    <link rel="stylesheet" type="text/css" href="../resource/css/common.css?after" />
-    <link rel="stylesheet" type="text/css" href="../resource/css/layout.css?after" />
-    <link rel="stylesheet" type="text/css" href="../resource/css/order.css?after" />
+    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/reset.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/common.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/layout.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/order.css' %}" />
 
     <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
 <!--<script>-->
 <!--var elearning_url       = "https://www.runcoding.co.kr"; var elearning_bbs_url   = "https://www.runcoding.co.kr/bbs"; var elearning_is_member = ""; var elearning_is_admin  = ""; var elearning_is_mobile = "0"; var elearning_bo_table  = ""; var elearning_sca       = ""; var elearning_editor    = ""; var elearning_cookie_domain = ""; </script>-->
 
-    <script src="../resource/js/vendor/jquery-3.4.1.min.js"></script>
-    <script src="../resource/js/jquery-migrate-3.0.0.js"></script>
-    <script src="../resource/js/vendor/modernizr-3.7.1.min.js"></script>
-    <script src="../resource/js/common.js?ver=20200730001"></script>
-    <script src="../resource/js/wrest.js?ver=20200730001"></script>
+    <script src="{% static 'resource/js/vendor/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'resource/js/jquery-migrate-3.0.0.js' %}"></script>
+    <script src="{% static 'resource/js/vendor/modernizr-3.7.1.min.js' %}"></script>
+    <script src="{% static 'resource/js/common.js?ver=20200730001' %}"></script>
+    <script src="{% static 'resource/js/wrest.js?ver=20200730001' %}"></script>
 </head>
 
 <body>
 <header>
     <div class="header_wrap">
-        <a href="http://ec2-54-180-116-142.ap-northeast-2.compute.amazonaws.com:8000/" class="logo">
-            <img src="../resource/img/common/logo.png" alt="runcoding">
+        <a href="/" class="logo">
+            <img src="{% static 'resource/img/common/logo.png' %}" alt="runcoding">
         </a>
         <!-- gnb -->
         <ul class="menu">
             <li>
-                <a href="../lecture/lecture_list.html">코딩키트</a>
+                <a href="{% static 'lecture/lecture_list.html' %}">코딩키트</a>
             </li>
             <li>
-                <a href="../lounge/coding_lounge.html">코딩라운지</a>
+                <a href="{% static 'lounge/coding_lounge.html' %}">코딩라운지</a>
             </li>
 
             <li>
-                <a href="../comunity/coding_comunity.html">커뮤니티</a>
+                <a href="{% static 'comunity/coding_comunity.html' %}">커뮤니티</a>
             </li>
             <li>
-                <a href="../lecture/myclass_list.html">나의 강의실</a>
+                <a href="{% static 'lecture/myclass_list.html' %}">나의 강의실</a>
             </li>
         </ul>
         <div class="ab_right">
@@ -70,7 +71,7 @@
 
             <!-- 로그인 -->
             <div class="user_menu">
-                <span class="userImg"><img src="../resource/img/sub/img_user.png" alt="유저 프로필"></span>
+                <span class="userImg"><img src="{% static 'resource/img/sub/img_user.png' %}" alt="유저 프로필"></span>
                 <ul class="sub_menu">
                     <li>
                         <a href="mypage.html">내 프로필</a>
@@ -82,7 +83,7 @@
                         <a href="orderList.html">주문내역</a>
                     </li>
                     <li>
-                        <a href="login.html">로그아웃</a>
+                        <a href="{% static 'login/logout.html' %}">로그아웃</a>
                     </li>
                 </ul>
             </div>
@@ -100,7 +101,7 @@
                 </span>
 
             </div>
-            <img class="subVisual codingKit" src="../resource/img/sub/sv_codingKit.png" alt="코딩키트">
+            <img class="subVisual codingKit" src="{% static 'resource/img/sub/sv_codingKit.png' %}" alt="코딩키트">
         </div>
     </section>
 
@@ -151,8 +152,8 @@
                                                 </td>
                                                 <td>
                                                      <div class="pull-left">
-                                                           <a href="../lecture/lecture_view_arduino.html">
-                                                               <img class="width-120px border-radius" src="../resource/img/Trashcan/trashcan_main.jpg" onError="this.onerror=null;this.src='/img/404/no_gig_sm_image.jpg';">
+                                                           <a href="{% static 'lecture/lecture_view_arduino.html' %}">
+                                                               <img class="width-120px border-radius" src="{% static 'resource/img/Trashcan/trashcan_main.jpg' %}" onError="this.onerror=null;this.src='/img/404/no_gig_sm_image.jpg';">
                                                            </a>
                                                      </div>
                                                 </td>
@@ -191,10 +192,10 @@
                                                     <span class="quantity">
                                                         <input type="text" id="prodQuantity_0" class="input quantity" value="1"/>
                                                         <a href="javascript:up('10', '0')" style="color: #000;">
-                                                            <img src="../resource/img/sub/btn_quantity_up.gif" alt="증가" class="QuantityUp">
+                                                            <img src="{% static 'resource/img/sub/btn_quantity_up.gif' %}" alt="증가" class="QuantityUp">
                                                         </a>
                                                         <a href="javascript:down('1', '0')" style="color: #000;">
-                                                            <img src="../resource/img/sub/btn_quantity_down.gif" alt="감소" class="QuantityDown">
+                                                            <img src="{% static 'resource/img/sub/btn_quantity_down.gif' %}" alt="감소" class="QuantityDown">
                                                         </a>
                                                     </span>
                                                 </td>
@@ -220,8 +221,8 @@
                                                 </td>
                                                 <td>
                                                      <div class="pull-left">
-                                                           <a href="../lecture/lecture_view_arduino.html">
-                                                               <img class="width-120px border-radius" src="../resource/img/Trashcan/trashcan_main.jpg" onError="this.onerror=null;this.src='/img/404/no_gig_sm_image.jpg';">
+                                                           <a href="{% static 'lecture/lecture_view_arduino.html' %}">
+                                                               <img class="width-120px border-radius" src="{% static 'resource/img/Trashcan/trashcan_main.jpg' %}" onError="this.onerror=null;this.src='/img/404/no_gig_sm_image.jpg';">
                                                            </a>
                                                      </div>
                                                 </td>
@@ -260,10 +261,10 @@
                                                    <span class="quantity">
                                                         <input id="prodQuantity_1" size="2" value="1" type="text">
                                                         <a href="javascript:up('10', '1')" style="color: #000;">
-                                                            <img src="../resource/img/sub/btn_quantity_up.gif" alt="증가" class="QuantityUp">
+                                                            <img src="{% static 'resource/img/sub/btn_quantity_up.gif' %}" alt="증가" class="QuantityUp">
                                                         </a>
                                                         <a href="javascript:down('1', '1')" style="color: #000;">
-                                                            <img src="../resource/img/sub/btn_quantity_down.gif" alt="감소" class="QuantityDown">
+                                                            <img src="{% static 'resource/img/sub/btn_quantity_down.gif' %}" alt="감소" class="QuantityDown">
                                                         </a>
                                                     </span>
                                                 </td>
@@ -428,20 +429,20 @@
 
 
 <div class="banner bottom">
-        <img class="bg left01" src="../resource/img/sub/bg_botBanner_left01.png" alt="bg01">
-        <img class="bg left02" src="../resource/img/sub/bg_botBanner_left02.png" alt="bg02">
-        <img class="bg right" src="../resource/img/sub/bg_botBanner_right.png" alt="bg03">
+        <img class="bg left01" src="{% static 'resource/img/sub/bg_botBanner_left01.png' %}" alt="bg01">
+        <img class="bg left02" src="{% static 'resource/img/sub/bg_botBanner_left02.png' %}" alt="bg02">
+        <img class="bg right" src="{% static 'resource/img/sub/bg_botBanner_right.png' %}" alt="bg03">
         <span>
             CREATIVE CODING KIT로 학습하는 <b>런코딩!</b><br/>
             지금 시작해보세요.
         </span>
-        <a href="../lecture/lecture_list.html" class="btn">시작하기</a>
+        <a href="{% static 'lecture/lecture_list.html' %}" class="btn">시작하기</a>
     </div>
 
 
    <footer>
             <div class="footer">
-                <img class="ci" src="../resource/img/common/logo_footer.png" alt="런코딩">
+                <img class="ci" src="{% static 'resource/img/common/logo_footer.png' %}" alt="런코딩">
                 <div class="footerText">
                     <div class="information">
                         <span>INFORMATION</span>
@@ -488,10 +489,10 @@
                     <div class="snsArea">
                         <span>SNS</span>
                         <div class="snsBtn">
-                            <a><img src="../resource/img/common/ico_kakaoTalk.png" alt="kakaotalk"></a>
-                            <a><img src="../resource/img/common/ico_instagram.png" alt="instagram"></a>
-                            <a><img src="../resource/img/common/ico_naverBlog.png" alt="naverblog"></a>
-                            <a><img src="../resource/img/common/ico_youtube.png" alt="youtube"></a>
+                            <a><img src="{% static 'resource/img/common/ico_kakaoTalk.png' %}" alt="kakaotalk"></a>
+                            <a><img src="{% static 'resource/img/common/ico_instagram.png' %}" alt="instagram"></a>
+                            <a><img src="{% static 'resource/img/common/ico_naverBlog.png' %}" alt="naverblog"></a>
+                            <a><img src="{% static 'resource/img/common/ico_youtube.png' %}" alt="youtube"></a>
                         </div>
                     </div>
                 </div>
@@ -541,17 +542,31 @@
         });
 
          $(document).ready(function() {
+            alert("cookies test");
 
-            // 쿠키 삭제
-            var cookies = document.cookie;
-            for (var i = 0; i < cookies.split(";").length; ++i)
+            if(document.cookie == "")
             {
-                var myCookie = cookies[i];
-                var pos = myCookie.indexOf("=");
-                var name = pos > -1 ? myCookie.substr(0, pos) : myCookie; document.cookie = name + "=;expires=Thu, 01 Jan 1970 00:00:00 GMT";
+                alert("로그인이 필요합니다.");
+                location.href = "/run_login/";
             }
-            modify_option_price();
-        });
+            else
+            {
+                modify_option_price();
+            }
+         });
+
+<!--         $(document).ready(function() {-->
+
+<!--            // 쿠키 삭제-->
+<!--            var cookies = document.cookie;-->
+<!--            for (var i = 0; i < cookies.split(";").length; ++i)-->
+<!--            {-->
+<!--                var myCookie = cookies[i];-->
+<!--                var pos = myCookie.indexOf("=");-->
+<!--                var name = pos > -1 ? myCookie.substr(0, pos) : myCookie; document.cookie = name + "=;expires=Thu, 01 Jan 1970 00:00:00 GMT";-->
+<!--            }-->
+<!--            modify_option_price();-->
+<!--        });-->
 
        function modify_option_price()
        {
