--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -376,7 +376,9 @@
 
     <!--  address script -->
 <script src="https://ssl.daumcdn.net/dmaps/map_js_init/postcode.v2.js"></script>
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<!--<script src="http://code.jquery.com/jquery-latest.min.js"></script>-->
+<script src="{% static 'resource/js/jquery-ajax-runcoding.js' %}"></script>
+
 
 <script>
 
