--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -574,7 +574,7 @@
 
         $.ajax({
             cache:false,
-            url : "http://localhost:8000/register/",
+            url : "http://54.180.116.142:8000/register/",
             type : "POST",
             data : formData,
             success : function(data)
