--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -413,6 +413,7 @@
         else
         {
            var formData = $("#register_form").serialize();
+           alert(formData);
 
             $.ajax({
                 cache:false,
